<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HyperFVM</string>
    <string name="top_bar_dashboard">仪表盘</string>
    <string name="label_dashboard_navigation">仪表盘</string>
    <string name="top_bar_data_center">数据中心</string>
    <string name="label_data_center_navigation">数据中心</string>
    <string name="top_bar_about_app">关于软件</string>
    <string name="label_about_app_navigation">关于软件</string>
    <string name="title_data_center_special_features">特色功能</string>
    <string name="title_data_center_card_data_index">防御卡全能数据库</string>
    <string name="description_data_center_card_data_index">装入了陌路防御卡数据图的所有内容</string>
    <string name="title_data_center_data_images_index">数据图合集</string>
    <string name="description_data_center_data_images_index">目标是打造成最全面的数据图合集</string>
    <string name="title_data_center_cookery_index">食神谱合集</string>
    <string name="description_data_center_cookery_index">查询食神谱的详细信息</string>
    <string name="title_data_center_odds_index">宝箱概率公示合集</string>
    <string name="description_data_center_odds_index">展示部分宝箱的概率公示信息</string>
    <string name="title_card_data_search">防御卡数据查询</string>
    <string name="version_card_data_search">20261002</string>
    <string name="tips_card_data_search">👇点击卡片即可进入数据详情页👇</string>
    <string name="tips_card_data_search_input">请输入防御卡名称</string>
    <string name="title_card_data_index_overview_big_1">当前版本</string>
    <string name="title_card_data_index_overview_big_2">收录卡片</string>
    <string name="top_bar_card_data_index">防御卡全能数据库</string>
    <string name="top_bar_card_data_index_pad">防御卡全能数据库</string>
    <string name="title_card_data_base">基础</string>
    <string name="title_card_data_data">数值</string>
    <string name="title_card_data_other">属性</string>
    <string name="title_card_data_see_detail">数据横屏展示</string>
    <string name="description_card_data_see_detail">一屏看全</string>
    <string name="top_bar_card_data_auxiliary_list_1">平射增幅卡全阵容</string>
    <string name="top_bar_card_data_auxiliary_list_2">投手增幅卡全阵容</string>
    <string name="top_bar_card_data_auxiliary_list_3">莓果点心</string>
    <string name="top_bar_card_data_auxiliary_list_4">香料虎</string>
    <string name="top_bar_card_data_auxiliary_list_5">塔利亚神使</string>
    <string name="top_bar_card_data_auxiliary_list_6">精灵龙</string>
    <string name="top_bar_card_data_auxiliary_list_7">五向增幅卡全阵容</string>
    <string name="top_bar_card_data_auxiliary_list_8">喷壶增幅卡全阵容</string>
    <string name="top_bar_card_data_auxiliary_list_9">固定轨迹增幅卡全阵容</string>
    <string name="top_bar_card_data_auxiliary_list_10">炎焱兔</string>
    <string name="title_card_data_auxiliary_list">增幅名单</string>
    <string name="title_card_data_auxiliary_list_5_1">👇四转后追加👇</string>
    <string name="title_card_data_auxiliary_list_5_2_1">至尊大力神</string>
    <string name="title_card_data_auxiliary_list_5_2_2">仅终转可被增幅</string>
    <string name="title_card_data_auxiliary_list_7_1">👇龙须面二转后追加👇</string>
    <string name="title_card_data_auxiliary_list_7_2">👇丰饶神三转后追加👇</string>
    <string name="title_card_data_auxiliary_list_8_1">以下卡片\n👇榨汁机3×3/3×3/5×5范围内增幅👇\n👇魔杖蛇3×3/5×5/5×5范围内增幅👇\n👇海洋女神5×5范围内增幅👇</string>
    <string name="title_card_data_auxiliary_list_8_2">以下卡片\n👇魔杖蛇3×3/5×5/5×5范围内增幅👇\n👇海洋女神5×1范围内增幅👇</string>
    <string name="title_card_data_auxiliary_list_8_3">以下卡片\n👇魔杖蛇和海洋女神本行增幅👇</string>
    <string name="title_decompose_and_get_calculator">分解兑换计算器</string>
    <string name="description_decompose_and_get_calculator">顾名思义，自助求和</string>
    <string name="top_bar_decompose_and_get_calculator">分解兑换计算器</string>
    <string name="title_decompose_calculator">分解</string>
    <string name="title_get_calculator">兑换</string>
    <string name="tips_decompose_and_get_calculator">勾选以加入计算</string>
    <string name="title_decompose_and_get_calculator_for_animal_card_card_1">卡片本体</string>
    <string name="title_decompose_and_get_calculator_for_animal_card_card_2">卡片一转</string>
    <string name="title_decompose_and_get_calculator_for_animal_card_card_3">卡片二转</string>
    <string name="title_decompose_and_get_calculator_for_animal_card_skill_1">初级技能书</string>
    <string name="title_decompose_and_get_calculator_for_animal_card_skill_2">高级技能书</string>
    <string name="title_decompose_and_get_calculator_for_animal_card_skill_3">终级技能书</string>
    <string name="title_decompose_and_get_calculator_for_animal_card_skill_4">究级技能书</string>
    <string name="title_decompose_and_get_calculator_for_animal_card_transfer_1_a">一转凭证A</string>
    <string name="title_decompose_and_get_calculator_for_animal_card_transfer_1_b">一转凭证B</string>
    <string name="title_decompose_and_get_calculator_for_animal_card_transfer_2_a">二转凭证A</string>
    <string name="title_decompose_and_get_calculator_for_animal_card_transfer_2_b">二转凭证B</string>
    <string name="title_decompose_and_get_calculator_for_animal_card_transfer_2_c">二转凭证C</string>
    <string name="title_decompose_and_get_calculator_for_golden_card_card_1">卡片本体</string>
    <string name="title_decompose_and_get_calculator_for_golden_card_card_2">卡片三转</string>
    <string name="title_decompose_and_get_calculator_for_golden_card_card_3">卡片四转</string>
    <string name="title_decompose_and_get_calculator_for_golden_card_card_4">卡片终转</string>
    <string name="title_decompose_and_get_calculator_for_golden_card_skill_1">初级技能书</string>
    <string name="title_decompose_and_get_calculator_for_golden_card_skill_2">高级技能书</string>
    <string name="title_decompose_and_get_calculator_for_golden_card_skill_3">终级技能书</string>
    <string name="title_decompose_and_get_calculator_for_golden_card_skill_4">究级技能书</string>
    <string name="title_decompose_and_get_calculator_for_golden_card_transfer_1_a">三转凭证A</string>
    <string name="title_decompose_and_get_calculator_for_golden_card_transfer_1_b">三转凭证B</string>
    <string name="title_decompose_and_get_calculator_for_golden_card_transfer_1_c">三转凭证C</string>
    <string name="title_decompose_and_get_calculator_for_golden_card_transfer_2_a">四转凭证A</string>
    <string name="title_decompose_and_get_calculator_for_golden_card_transfer_2_b">四转凭证B</string>
    <string name="title_decompose_and_get_calculator_for_golden_card_transfer_2_c">四转凭证C</string>
    <string name="title_decompose_and_get_calculator_for_golden_card_transfer_3_a">终转凭证A</string>
    <string name="title_decompose_and_get_calculator_for_golden_card_transfer_3_b">终转凭证B</string>
    <string name="title_decompose_and_get_calculator_for_golden_card_transfer_3_c">终转凭证C</string>
    <string name="title_decompose_and_get_calculator_for_golden_card_compose">进化凭证</string>
    <string name="top_bar_data_images_index">数据图合集</string>
    <string name="top_bar_data_images_index_tiramisu_image">米鼠的图</string>
    <string name="top_bar_data_images_index_card">防御卡数据图</string>
    <string name="top_bar_data_images_index_weapon_and_gem">武器宝石数据图</string>
    <string name="top_bar_data_images_index_decompose_and_get">分解兑换数据图</string>
    <string name="top_bar_data_images_index_mouse_hp">老鼠血量数据图</string>
    <string name="top_bar_data_images_index_others">其他数据图</string>
    <string name="top_bar_data_images_viewer">数据图查看器</string>
    <string name="title_data_images_index_tiramisu">米鼠的图</string>
    <string name="author_data_images_index_tiramisu">By 夏夜浅酌</string>
    <string name="tips_data_images_index_tiramisu_title">一个小提示</string>
    <string name="tips_data_images_index_tiramisu_description">设置这个版块的目的是当米鼠有时候叫不出来时，您仍然可以在这里查看部分数据图。\n图片更新可能不及时，当这里的图片和米鼠不一致时，请以米鼠提供的为准。</string>
    <string name="title_tools_tiramisu_image_1">氪金活动类</string>
    <string name="title_tools_tiramisu_image_1_1">周氪图</string>
    <string name="description_tools_tiramisu_image_1_1">Q群获取指令：@提拉米鼠 /周氪</string>
    <string name="title_tools_tiramisu_image_1_2">日氪图</string>
    <string name="description_tools_tiramisu_image_1_2">Q群获取指令：@提拉米鼠 /日氪</string>
    <string name="title_tools_tiramisu_image_1_3_1">消费图(0–100W)</string>
    <string name="description_tools_tiramisu_image_1_3_1">Q群获取指令：@提拉米鼠 /消费-1</string>
    <string name="title_tools_tiramisu_image_1_3_2">消费图(100–200W)</string>
    <string name="description_tools_tiramisu_image_1_3_2">Q群获取指令：@提拉米鼠 /消费-2</string>
    <string name="title_tools_tiramisu_image_1_3_3">消费图(200–300W)</string>
    <string name="description_tools_tiramisu_image_1_3_3">Q群获取指令：@提拉米鼠 /消费-3</string>
    <string name="title_tools_tiramisu_image_1_4">积分兑换图</string>
    <string name="description_tools_tiramisu_image_1_4">Q群获取指令：@提拉米鼠 /积分</string>
    <string name="title_tools_tiramisu_image_1_5">商城抢购图</string>
    <string name="description_tools_tiramisu_image_1_5">Q群获取指令：@提拉米鼠 /商城</string>
    <string name="title_tools_tiramisu_image_1_6">婚礼服装图</string>
    <string name="description_tools_tiramisu_image_1_6">Q群获取指令：@提拉米鼠 /婚礼</string>
    <string name="title_tools_tiramisu_image_1_7">假期兑换图</string>
    <string name="description_tools_tiramisu_image_1_7">Q群获取指令：@提拉米鼠 /假期</string>
    <string name="title_tools_tiramisu_image_2">游戏资料类</string>
    <string name="title_tools_tiramisu_image_2_1">三岛兑换图</string>
    <string name="description_tools_tiramisu_image_2_1">Q群获取指令：@提拉米鼠 /三岛</string>
    <string name="title_tools_tiramisu_image_2_2">悬赏声望图</string>
    <string name="description_tools_tiramisu_image_2_2">Q群获取指令：@提拉米鼠 /声望</string>
    <string name="title_tools_tiramisu_image_2_3">大赛奖励图</string>
    <string name="description_tools_tiramisu_image_2_3">Q群获取指令：@提拉米鼠 /大赛</string>
    <string name="title_tools_tiramisu_image_2_3_1">大赛任务图</string>
    <string name="description_tools_tiramisu_image_2_3_1">Q群获取指令：\n@提拉米鼠 /大赛-1\n@提拉米鼠 /大赛-2\n@提拉米鼠 /大赛-3\n@提拉米鼠 /大赛-4</string>
    <string name="title_tools_tiramisu_image_2_4_1" tools:ignore="Typos">VIP1权益图</string>
    <string name="description_tools_tiramisu_image_2_4_1">Q群获取指令：@提拉米鼠 /VIP 1</string>
    <string name="title_tools_tiramisu_image_2_4_2" tools:ignore="Typos">VIP2权益图</string>
    <string name="description_tools_tiramisu_image_2_4_2">Q群获取指令：@提拉米鼠 /VIP 2</string>
    <string name="title_tools_tiramisu_image_2_4_3" tools:ignore="Typos">VIP3权益图</string>
    <string name="description_tools_tiramisu_image_2_4_3">Q群获取指令：@提拉米鼠 /VIP 3</string>
    <string name="title_tools_tiramisu_image_2_4_4" tools:ignore="Typos">VIP4权益图</string>
    <string name="description_tools_tiramisu_image_2_4_4">Q群获取指令：@提拉米鼠 /VIP 4</string>
    <string name="title_tools_tiramisu_image_2_4_5" tools:ignore="Typos">VIP5权益图</string>
    <string name="description_tools_tiramisu_image_2_4_5">Q群获取指令：@提拉米鼠 /VIP 5</string>
    <string name="title_tools_tiramisu_image_2_4_6" tools:ignore="Typos">VIP6权益图</string>
    <string name="description_tools_tiramisu_image_2_4_6">Q群获取指令：@提拉米鼠 /VIP 6</string>
    <string name="title_tools_tiramisu_image_2_4_7" tools:ignore="Typos">VIP7权益图</string>
    <string name="description_tools_tiramisu_image_2_4_7">Q群获取指令：@提拉米鼠 /VIP 7</string>
    <string name="title_tools_tiramisu_image_2_4_8" tools:ignore="Typos">VIP8权益图</string>
    <string name="description_tools_tiramisu_image_2_4_8">Q群获取指令：@提拉米鼠 /VIP 8</string>
    <string name="title_tools_tiramisu_image_2_4_9" tools:ignore="Typos">VIP9权益图</string>
    <string name="description_tools_tiramisu_image_2_4_9">Q群获取指令：@提拉米鼠 /VIP 9</string>
    <string name="title_tools_tiramisu_image_2_4_10" tools:ignore="Typos">VIP10权益图</string>
    <string name="description_tools_tiramisu_image_2_4_10">Q群获取指令：@提拉米鼠 /VIP 10</string>
    <string name="title_tools_tiramisu_image_2_4_11" tools:ignore="Typos">VIP11权益图</string>
    <string name="title_data_center_strategy_world_boss">巅峰对决部分机制解析</string>
    <string name="author_data_center_strategy_world_boss">By 式祈</string>
    <string name="description_data_center_strategy_world_boss">段位数据、BOSS技能、BUFF机制</string>
    <string name="dialog_title_icu">查黑系统</string>
    <string name="dialog_description_icu">输入QQ号以查询是否有行骗记录\n查黑系统原作者为就喝百事\nHyperFVM仅提供本地UI方便查询</string>
    <string name="dialog_tips_icu">请输入您要查询的QQ号</string>
</resources>