<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="ContentDescription">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="?attr/GeneralCardViewBackground"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:id="@+id/card_strategy_world_boss_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:gravity="center"
            android:clickable="true"
            android:background="?attr/selectableItemBackground">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:src="@drawable/dashboard_world_boss"
                android:scaleType="fitCenter" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_data_center_strategy_world_boss"
                    android:textColor="?attr/TextViewColorOnGeneralCardView"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/author_data_center_strategy_world_boss"
                    android:textColor="?attr/SummaryTextViewColorOnGeneralCardView"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description_data_center_strategy_world_boss"
                    android:textColor="?attr/SummaryTextViewColorOnGeneralCardView"
                    android:textSize="15sp"/>

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right"
                app:tint="?attr/SummaryTextViewColorOnGeneralCardView" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</merge>