<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?attr/colorSurface"
    tools:ignore="HardcodedText,ContentDescription">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="26dp"
        android:gravity="center"
        android:text="@string/title_card_data_search"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="?attr/colorOnSurface"
        android:clickable="true"/>

    <TextView
        android:id="@+id/version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:paddingBottom="26dp"
        android:gravity="center"
        android:text="@string/version_card_data_search"
        android:textSize="20sp"
        android:textColor="?attr/colorOnSurfaceVariant"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="26dp"
        app:boxStrokeWidth="2dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:backgroundTint="@android:color/transparent"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="20sp"
            android:textColor="?attr/colorOnSurface"
            android:hint="@string/tips_card_data_search_input"
            android:textColorHint="?attr/colorOnSurfaceVariant"
            android:inputType="text"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/content_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="6dp"
        android:gravity="center"
        android:text="@string/tips_card_data_search"
        android:textSize="15sp"
        android:textColor="?attr/colorOnSurfaceVariant"
        android:visibility="gone"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none"
        android:clipChildren="false"
        android:clipToPadding="false">

        <!-- 建议列表 -->
        <LinearLayout
            android:id="@+id/suggestion_card_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="26dp"
            android:orientation="vertical"
            android:clipChildren="false"
            android:clipToPadding="false" />

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="26dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="?attr/colorPrimary"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/button_close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="11dp"
                android:gravity="center"
                android:text="关闭窗口"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnPrimary"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>