<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="ContentDescription">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_data_index_overview_big_container"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        app:cardBackgroundColor="?attr/GeneralCardViewBackground"
        app:cardCornerRadius="20dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="-5dp"
                android:layout_marginBottom="-10dp"
                android:layout_gravity="end|bottom"
                android:src="@drawable/ic_cards"
                app:tint="?attr/TitleTextViewColorOnSurface" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|top"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/card_data_index_overview_big_title_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/title_card_data_index_overview_big_1"
                    android:textSize="15sp"
                    android:textColor="?attr/SummaryTextViewColorOnGeneralCardView"/>

                <TextView
                    android:id="@+id/card_data_index_overview_big_content_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/version_card_data_search"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="?attr/TextViewColorOnGeneralCardView"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/card_data_index_overview_big_title_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/title_card_data_index_overview_big_2"
                    android:textSize="15sp"
                    android:textColor="?attr/SummaryTextViewColorOnGeneralCardView"/>

                <TextView
                    android:id="@+id/card_data_index_overview_big_content_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="?attr/TextViewColorOnGeneralCardView"/>

            </LinearLayout>

        </FrameLayout>

    </androidx.cardview.widget.CardView>

</merge>