<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/title_card_data_auxiliary_list_8_1"
        android:textColor="?attr/TextViewColorOnGeneralCardView"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"/>

    <include
        android:id="@+id/card_card_data_index_x11931060"
        layout="@layout/card_card_data_index_x11931060" />

    <include
        android:id="@+id/card_card_data_index_x11930074"
        layout="@layout/card_card_data_index_x11930074" />

    <include
        android:id="@+id/card_card_data_index_x1193007a"
        layout="@layout/card_card_data_index_x1193007a" />

    <include
        android:id="@+id/card_card_data_index_x11930374"
        layout="@layout/card_card_data_index_x11930374" />

    <include
        android:id="@+id/card_card_data_index_x11930084"
        layout="@layout/card_card_data_index_x11930084" />

    <include
        android:id="@+id/card_card_data_index_x11120500"
        layout="@layout/card_card_data_index_x11120500" />

    <include
        android:id="@+id/card_card_data_index_x11122470"
        layout="@layout/card_card_data_index_x11122470" />

    <include
        android:id="@+id/card_card_data_index_x11122890"
        layout="@layout/card_card_data_index_x11122890" />

    <include
        android:id="@+id/card_card_data_index_x11122660"
        layout="@layout/card_card_data_index_x11122660" />

    <include
        android:id="@+id/card_card_data_index_x1112280a"
        layout="@layout/card_card_data_index_x1112280a" />

    <include
        android:id="@+id/card_card_data_index_x11700130"
        layout="@layout/card_card_data_index_x11700130" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/title_card_data_auxiliary_list_8_2"
        android:textColor="?attr/TextViewColorOnGeneralCardView"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"/>

    <include
        android:id="@+id/card_card_data_index_x11122740"
        layout="@layout/card_card_data_index_x11122740" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/title_card_data_auxiliary_list_8_3"
        android:textColor="?attr/TextViewColorOnGeneralCardView"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"/>

    <include
        android:id="@+id/card_card_data_index_x11131070"
        layout="@layout/card_card_data_index_x11131070" />

    <include
        android:id="@+id/card_card_data_index_x111310c0"
        layout="@layout/card_card_data_index_x111310c0" />

    <include
        android:id="@+id/card_card_data_index_x11122110"
        layout="@layout/card_card_data_index_x11122110" />

    <include
        android:id="@+id/card_card_data_index_x1112248a"
        layout="@layout/card_card_data_index_x1112248a" />

    <include
        android:id="@+id/card_card_data_index_x11130240"
        layout="@layout/card_card_data_index_x11130240" />

    <include
        android:id="@+id/card_card_data_index_x11130250"
        layout="@layout/card_card_data_index_x11130250" />

    <include
        android:id="@+id/card_card_data_index_x11122840"
        layout="@layout/card_card_data_index_x11122840" />

</LinearLayout>