<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?attr/colorSurface"
    tools:ignore="HardcodedText,ContentDescription">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="26dp"
        android:gravity="center"
        android:text="@string/dialog_title_icu"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="?attr/colorOnSurface"
        android:clickable="true"/>

    <TextView
        android:id="@+id/content_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="6dp"
        android:paddingBottom="26dp"
        android:gravity="center"
        android:text="@string/dialog_description_icu"
        android:textSize="15sp"
        android:textColor="?attr/colorOnSurfaceVariant"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="26dp"
        app:boxStrokeWidth="2dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:backgroundTint="@android:color/transparent"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="20sp"
            android:textColor="?attr/colorOnSurface"
            android:hint="@string/dialog_tips_icu"
            android:textColorHint="?attr/colorOnSurfaceVariant"
            android:inputType="text"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="26dp"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardBackgroundColor="?attr/colorSurfaceContainer"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/button_close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="11dp"
                android:gravity="center"
                android:text="关闭窗口"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnSurface"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"/>

        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="26dp"
            android:layout_height="wrap_content" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardBackgroundColor="?attr/colorPrimary"
            app:cardCornerRadius="20dp">

            <TextView
                android:id="@+id/button_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="11dp"
                android:gravity="center"
                android:text="一键查询"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="?attr/colorOnPrimary"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>
